<?xml version="1.0"?>
<package>
  <name>my_gazebo_concert</name>
  <version>0.6.7</version>
  <description>
    This is a copy of gazebo_concert package for tutorial to provide
    alternative parameters.
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/gazebo_concert</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_tutorials</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_tutorials/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>concert_master</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>concert_scheduler_requests</run_depend>
  <run_depend>concert_service_admin</run_depend>
  <run_depend>concert_service_gazebo</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_apps</run_depend>
  <run_depend>rocon_bubble_icons</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>rocon_python_utils</run_depend>
  <run_depend>rocon_uri</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>

</package>
